--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -1,5 +1,3 @@
-
-
 .weather {
   place-self: center;
   padding: 40px;
@@ -36,21 +34,19 @@
 }
 
 .weather-icon {
-  width: 150px;
-  margin: 30px 0;
+  width: 120px;
+  height: 120px;
 }
 
 .temperature {
   color: #ffffff;
   font-size: 80px;
   line-height: 1;
-  
 }
 
 .location {
-   color: #ffffff; 
+  color: #ffffff;
   font-size: 40px;
- 
 }
 
 .weather-data {
